// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package events;

option go_package = "github.com/gravitational/teleport/api/types/events";

// AthenaS3EventPayload is used as payload for sending large events to SQS.
message AthenaS3EventPayload {
  // Path on S3.
  string path = 1;
  // VersionID is versionID of file on s3, if versioning is enabled.
  string version_id = 2;
  // Custom KMS key for server-side encryption.
  string ckms = 3;
}
